temporary alignment fix for currently reading item cover

--- a/_includes/assets/css/layouts/bookshelf.css
+++ b/_includes/assets/css/layouts/bookshelf.css
@@ -69,3 +69,7 @@
     padding: 0.335rem 0.75rem 0.75rem 0;
   }
 }
+
+.Bookshelf-current {
+  height: 100%;
+}
